Java 21, build cleanup
- Minimum macOS now 11/Big Sur