@@ -25,7 +25,7 @@ import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.image.Image;
 import javafx.stage.Stage;
-import jdk.internal.misc.Unsafe;
+import sun.misc.Unsafe;
 
 import java.io.File;
 import java.io.IOException;
@@ -98,21 +98,22 @@ public class Main {
      *s
      * Writing to private static final fields is from https://stackoverflow.com/a/61150853/5938387
      */
-    @SuppressWarnings({"removal", "Java9ReflectionClassVisibility"})
+    @SuppressWarnings({"Java9ReflectionClassVisibility", "deprecation"})
     static void fixCertificateError() {
         try {
-            final var unsafe = Unsafe.getUnsafe();
+            var theUnsafe = Unsafe.class.getDeclaredField("theUnsafe");
+            theUnsafe.setAccessible(true);
+            final var unsafe = (Unsafe) theUnsafe.get(null);
             var field = Class.forName("sun.security.validator.SymantecTLSPolicy").getDeclaredField("EXEMPT_SUBCAS");
 
-            var staticFieldBase = unsafe.staticFieldBase(field);
-            long staticFieldOffset = unsafe.staticFieldOffset(field);
-            unsafe.putObject(staticFieldBase, staticFieldOffset, Map.of( // Copied from SymantecTLSPolicy.EXEMPT_SUBCAS
+            unsafe.putObject(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field),
+                    Map.of( // Copied from SymantecTLSPolicy.EXEMPT_SUBCAS
                     "AC2B922ECFD5E01711772FEA8ED372DE9D1E2245FCE3F57A9CDBEC77296A424B",
                     LocalDate.MAX,
                     "A4FE7C7F15155F3F0AEF7AAA83CF6E06DEB97CA3F909DF920AC1490882D488ED",
                     LocalDate.MAX
             ));
-        } catch (ClassNotFoundException | NoSuchFieldException e) {
+        } catch (ClassNotFoundException | NoSuchFieldException | IllegalAccessException e) {
             e.printStackTrace();
         }
     }
@@ -144,7 +145,7 @@ public class Main {
             primaryStage.setTitle("blobsaver");
             primaryStage.setScene(new Scene(root));
             if (isWindows()) {
-                primaryStage.getIcons().setAll(new Image(Main.class.getResourceAsStream("blob_emoji.png")));
+                primaryStage.getIcons().setAll(new Image(Main.class.getResourceAsStream("blob.png")));
             }
             primaryStage.setResizable(false);
             Utils.checkForUpdates(false);
